@@ -1,7 +1,7 @@
-% compiler: GNU Prolog 1.2.14 (Jun 20 2002)
+% compiler: GNU Prolog 1.2.16 (Sep 19 2002)
 % file    : pred.pl
-% date    : 6 21 2002
-% time    : 16:37:10
+% date    : 9 30 2002
+% time    : 22:6:47
 
 
 file_name('/home/diaz/GP/src/src/BipsPl/pred.pl').
@@ -24,27 +24,39 @@ predicate('$current_predicate'/1,36,static,private,built_in,[
     proceed]).
 
 
-predicate('$current_predicate_any'/1,41,static,private,built_in,[
+predicate('$current_predicate_bips'/1,40,static,private,built_in,[
+    put_integer(1,1),
+    call_c('Current_Predicate_2',[boolean],[x(0),x(1)]),
+    proceed]).
+
+
+predicate('$current_predicate_any'/1,44,static,private,built_in,[
     put_integer(2,1),
     call_c('Current_Predicate_2',[boolean],[x(0),x(1)]),
     proceed]).
 
 
-predicate('$current_predicate_alt'/0,45,static,private,built_in,[
+predicate('$current_predicate_alt'/0,48,static,private,built_in,[
     call_c('Current_Predicate_Alt_0',[boolean],[]),
     proceed]).
 
 
-predicate(predicate_property/2,51,static,private,built_in,[
-    put_atom(predicate_property,2),
-    put_integer(2,3),
-    call_c('Set_Bip_Name_2',[],[x(2),x(3)]),
-    put_integer(1,2),
-    call_c('Current_Predicate_2',[boolean],[x(0),x(2)]),
+predicate(predicate_property/2,54,static,private,built_in,[
+    allocate(2),
+    get_variable(y(0),0),
+    get_variable(y(1),1),
+    put_atom(predicate_property,0),
+    put_integer(2,1),
+    call_c('Set_Bip_Name_2',[],[x(0),x(1)]),
+    put_value(y(0),0),
+    call('$current_predicate_bips'/1),
+    put_value(y(0),0),
+    put_value(y(1),1),
+    deallocate,
     execute('$predicate_property1'/2)]).
 
 
-predicate('$predicate_property_any'/2,57,static,private,built_in,[
+predicate('$predicate_property_any'/2,60,static,private,built_in,[
     allocate(2),
     get_variable(y(0),0),
     get_variable(y(1),1),
@@ -56,7 +68,7 @@ predicate('$predicate_property_any'/2,57,static,private,built_in,[
     execute('$predicate_property1'/2)]).
 
 
-predicate('$predicate_property1'/2,64,static,private,built_in,[
+predicate('$predicate_property1'/2,67,static,private,built_in,[
     load_cut_level(2),
     allocate(3),
     get_variable(y(0),0),
@@ -71,7 +83,7 @@ predicate('$predicate_property1'/2,64,static,private,built_in,[
     execute('$predicate_property2'/2)]).
 
 
-predicate('$check_pred_prop'/1,71,static,private,built_in,[
+predicate('$check_pred_prop'/1,74,static,private,built_in,[
     try_me_else(1),
     call_c('Blt_Var',[fast_call,boolean],[x(0)]),
     proceed,
@@ -165,7 +177,7 @@ label(24),
     execute('$pl_err_domain'/2)]).
 
 
-predicate('$predicate_property2'/2,100,static,private,built_in,[
+predicate('$predicate_property2'/2,103,static,private,built_in,[
     switch_on_term(3,1,fail,fail,2),
 
 label(1),
@@ -257,31 +269,31 @@ label(22),
     proceed]).
 
 
-predicate('$get_predicate_file_info'/3,133,static,private,built_in,[
+predicate('$get_predicate_file_info'/3,136,static,private,built_in,[
     call_c('Get_Predicate_File_Info_3',[boolean],[x(0),x(1),x(2)]),
     proceed]).
 
 
-predicate('$set_predicate_file_info'/3,139,static,private,built_in,[
+predicate('$set_predicate_file_info'/3,142,static,private,built_in,[
     call_c('Set_Predicate_File_Info_3',[boolean],[x(0),x(1),x(2)]),
     proceed]).
 
 
-predicate('$aux_name'/1,145,static,private,built_in,[
+predicate('$aux_name'/1,148,static,private,built_in,[
     call_c('Aux_Name_1',[boolean],[x(0)]),
     proceed]).
 
 
-predicate('$father_of_aux_name'/3,151,static,private,built_in,[
+predicate('$father_of_aux_name'/3,154,static,private,built_in,[
     call_c('Father_Of_Aux_Name_3',[boolean],[x(0),x(1),x(2)]),
     proceed]).
 
 
-predicate('$pred_without_aux'/4,157,static,private,built_in,[
+predicate('$pred_without_aux'/4,160,static,private,built_in,[
     call_c('Pred_Without_Aux_4',[boolean],[x(0),x(1),x(2),x(3)]),
     proceed]).
 
 
-predicate('$make_aux_name'/4,163,static,private,built_in,[
+predicate('$make_aux_name'/4,166,static,private,built_in,[
     call_c('Make_Aux_Name_4',[boolean],[x(0),x(1),x(2),x(3)]),
     proceed]).
